# Splines

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeInstall.txt  CMakeLists-cflags.txt  CMakeLists.txt  CMakeUtilities.txt  CPackConfig.cmake  Doxyfile  README.md  README.rst  README_OLD.md  Rakefile  Rakefile_common.rb  Rakefile_conf.rb  Splines.prj  SplinesConfig.cmake.in  build.bat  licence.txt  license.txt  makefile  remove_lfs.txt  setup.rb  sp-compile-all.bat  test_surf.json
Xcode/Splines.xcodeproj/: project.pbxproj
cmake/: CMakeLists-blas-lapack.txt  CMakeLists-cflags.txt  CMakeLists-common.txt  CMakeLists-utilities.txt
doc_generate/: .gitignore  Doxyfile  Doxyfile_custom  Doxyfile_custom2  Makefile  README-DOC.md  author.md  conf.py  doxygen-awesome.css  doxygen-doc-env.yml  filter.rb  index_MATLAB.md  m2cpp.pl  usage.md
doc_generate/_static/: custom.css
doc_generate/_templates/: layout.html
docs/: .buildinfo  Doxyfile  LICENSE.html  api_c.html  api_cpp.html  api_matlab.html  author.html  genindex.html  index.html  index.md  index_CPP.html  index_MATLAB.html  interfaces.html  objects.inv  permalink.html  readme.html  references.html  roleindex.json  search.html  searchindex.js  usage.html
docs/_sources/: LICENSE.md.txt  api_cpp.rst.txt  index.md.txt  index.rst.txt  index_CPP.md.txt  readme.rst.txt
docs/_static/: agogo.css  basic.css  cloud.css
docs/api-c/: .buildinfo  class_view_hierarchy.html  define__splines_cinterface_8h_1ade8086f0fd9d3bd49264ebd0bd5b6cdc.html  define_a00014_1ade8086f0fd9d3bd49264ebd0bd5b6cdc.html  define_a00017_1ade8086f0fd9d3bd49264ebd0bd5b6cdc.html  define_a00020_1ade8086f0fd9d3bd49264ebd0bd5b6cdc.html  (+86 more)
docs_build/: Makefile  filter.rb  logo.graffle  md2rts.rb  project_common.py  xml_merge.rb
lib/: Splines_ffi.rb
lib_matlab/: BaseHermite.m  CompileLib.m  CompileSplinesLib.m  Spline1D.m  Spline2D.m  SplineVec.m
removed/: SplineBSpline.cc
src/: SplineAkima.cc  SplineAkima.hxx  SplineAkima2D.cc  SplineAkima2D.hxx  SplineBSpline.cc  SplineBessel.cc  SplineBessel.hxx  SplineBiCubic.cc  SplineBiCubic.hxx  SplineBiQuintic.cc  SplineBiQuintic.hxx  SplineBilinear.cc  SplineBilinear.hxx  SplineConstant.cc  SplineConstant.hxx  SplineCubic.cc  SplineCubic.hxx  SplineCubicBase.cc  SplineHermite.cc  SplineHermite.hxx  SplineLinear.cc  SplineLinear.hxx  SplinePchip.cc  SplinePchip.hxx  SplineQuintic.cc  SplineQuintic.hxx  SplineQuinticBase.cc  SplineQuinticBase.hxx  SplineSet.cc  SplineSet.hxx  SplineSetGC.cc  SplineSurf.cc  SplineVec.cc  SplineVec.hxx  Splines.cc  Splines.hh  Splines1D.cc  Splines1D.hxx  Splines1Dblend.cc  Splines2D.cc  (+10 more)
src_matlab_interface/: Compile.m  CompileLib.m  README_matlab_interface.md  Spline1D.m  mex_BaseHermiteWrapper.cc  mex_Spline1DMexWrapper.cc  mex_Spline2DMexWrapper.cc  mex_SplineSetMexWrapper.cc  mex_SplineVecMexWrapper.cc  mex_spline1d.cc  mex_spline2d.cc  mex_splineSet.cc  mex_utils.hh  pericona.m  test1.m  test2.m  test3.m  test4.m
src_python_interface/: CMakeLists.txt  LICENSE  README.md
src_python_interface/include/: py-AkimaSplines.hh  py-BesselSplines.hh  py-ConstantSplines.hh  py-CubicSplines.hh  py-HermiteSplines.hh  py-LinearSplines.hh  py-PchipSplines.hh  py-QuinticSplines.hh  py-Splines.hh
src_python_interface/src/: py-AkimaSplines.cc  py-BesselSplines.cc  py-ConstantSplines.cc  py-CubicSplines.cc  py-HermiteSplines.cc  py-LinearSplines.cc  py-PchipSplines.cc  py-QuinticSplines.cc  py-Splines.cc
src_ruby_interface/: Splines_ffi.rb  test.rb
src_tests/: test01.cc  test03.cc  test04.cc  test05.cc  test06.cc  test1.cc  test10.cc  test11.cc  test12.cc  test13.cc  test14.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc  test8.cc  test9.cc
srcs/: SplineAkima.cc  SplineAkima2D.cc  SplineBSpline.cc  SplineBessel.cc  SplineBiCubic.cc  SplineBiQuintic.cc  SplineBilinear.cc  SplineConstant.cc  SplineCubic.cc  SplineCubicBase.cc  SplineHermite.cc  SplineLinear.cc  SplinePchip.cc  SplineQuintic.cc  SplineQuinticBase.cc  SplineSet.cc  SplineSetGC.cc  Splines.cc  Splines.hh  SplinesBivariate.cc  SplinesCinterface.cc  SplinesCinterface.h  SplinesUnivariate.cc  Splines_doxygen.hh
srcs_matlab_interface/: Compile.m  mex_spline1d.cc  mex_spline2d.cc  test.m
srcs_utils/: Malloc.hh
submodules/: Rakefile  Rakefile_conf.rb  Rakefile_configure.rb
tests/: test.rb  test1.cc  test10.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc  test7.cc  test8.cc  test9.cc
tests-cpp/: test10.cc  test3.cc  test6.cc  test8.cc  test9.cc
tests_matlab/: for_icon.m  test1.m  test2.m  test3.m  test4.m  test5.m
toolbox/: CMakeLists.txt  CompileLib.m  CompileSplinesLib.m  README.md  Splines_test12.m  build.rb  demos.xml  populate_toolbox.rb  setup.m
toolbox/cmake/: CMakeLists-cflags.txt  CMakeLists-common.txt  CMakeLists-cpack.txt  CMakeLists-utilities.txt
toolbox/cmake_utils/: CMakeLists-blas-lapack.txt  CMakeLists-cflags.txt  CMakeLists-common.txt  CMakeLists-cpack.txt  CMakeLists-utilities.txt  README.md  Rakefile_common.rb  Rakefile_configure.rb
toolbox/lib/: BaseHermite.m  CMakeLists.txt  CompileSplinesLib.m  CompileSplinesLib_cmake.m  Spline1D.m  Spline1Dblend.m  Spline2D.m  Spline2Dblend.m  SplineSet.m  SplineVec.m  save_png.m
toolbox/src_mex/: GenericContainerInterface_matlab.cc  GenericContainerMatlabInterface.cc  README_matlab_interface.md  mex_BaseHermiteMexWrapper.cc  mex_BaseHermiteWrapper.cc  mex_Spline1DMexWrapper.cc  mex_Spline1DblendMexWrapper.cc  mex_Spline2DMexWrapper.cc  mex_Spline2DblendMexWrapper.cc  mex_SplineSetMexWrapper.cc  mex_SplineVecMexWrapper.cc  mex_utils.hh
toolbox/tests/: Splines_Hermite_test.m  Splines_for_icon.m  Splines_image_doc.m  Splines_image_doc2.m  Splines_test1.m  Splines_test10.m  Splines_test11.m  Splines_test12.m  Splines_test13.m  Splines_test2.m  Splines_test3.m  Splines_test4.m  Splines_test5.m  Splines_test6.m  Splines_test7.m  Splines_test8.m  Splines_test9.m  for_icon.m  image_doc2.m  test_surf.json
win_compile/: sp-compile-vs2013.bat  sp-compile-vs2015.bat  sp-install-vs2013.bat  sp-install-vs2015.bat  sp-setup.bat
(+2477 files in other folders)
